--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link  rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Home</title>
+</head>
+<body>
+    <nav class="menu">
+        <ul>
+            <a href="index.html"><li>Home</li></a>
+            <a><li>Sobre</li></a>
+            <a><li>Projetos</li></a>
+            <a><li>Contato</li></a>
+        </ul>
+        <img src="img/Logo.svg" class="logo">
+    </nav>
+    <div class="home">
+        <img src="img/img1.png" id="cara" width="70%">
+    </div>
+    
+</body>
+</html>
