--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="menu">
         <ul>
             <a href="#home"><li>Home</li></a>
-            <a><li>Sobre</li></a>
+            <a href="#sobre"><li>Sobre</li></a>
             <a><li>Projetos</li></a>
             <a><li>Contato</li></a>
         </ul>
@@ -23,10 +23,14 @@
         <div class="text">
             <h1>Daniel Ek 👋</h1>
             <img src="img/barra.svg">
-            <p>Sou Daniel Ek, cofundador e CEO do Spotify. Desde cedo, fui apaixonado por tecnologia e música, e minha missão sempre foi transformar a forma como o mundo consome áudio. Com o Spotify, democratizamos o acesso à música e revolucionamos a indústria do streaming, conectando artistas e ouvintes de maneira inovadora.</p>
+            <p>Sou Daniel Ek, um empreendedor movido pela inovação e pela paixão por música e tecnologia. Desde jovem, sempre fui fascinado por como a tecnologia pode mudar o mundo e criar novas oportunidades. Foi essa curiosidade que me levou a fundar o Spotify, um projeto que nasceu de uma ideia simples, mas ambiciosa: tornar a música acessível para todos, sem comprometer os direitos dos artistas.
+
+                Ao longo dos anos, vi o Spotify crescer e transformar a indústria musical, mudando a forma como ouvimos e descobrimos músicas. Mas para mim, inovação nunca tem um ponto final – sempre há espaço para evoluir, para encontrar novas formas de conectar pessoas e para explorar novas fronteiras no mundo do áudio.
+                
+                Além do Spotify, sigo investindo em tecnologia e novas ideias por meio da Prima Materia, buscando soluções que possam impactar positivamente o mundo. Meu objetivo não é apenas criar produtos, mas fomentar um ecossistema onde criatividade e tecnologia andem juntas, abrindo caminhos para o futuro.</p>
         </div>
         <div class="foto">
-
+            <img src="img/img3.jpg">
         </div>
         
     </section>
